--- a/client/src/styles/loader.scss
+++ b/client/src/styles/loader.scss
@@ -2,7 +2,7 @@
 
 .loader-page {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 10rem - 50px);
     display: flex;
     justify-content: center;
     align-items: center;
