make insignificant changes to the dashboard and forgot password styles

--- a/client/src/styles/forgotPassword.scss
+++ b/client/src/styles/forgotPassword.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     .forgot-password-main-content {
-        width:65%;
+        width:60%;
         .header {
             color: $primary;
             text-transform: uppercase;
@@ -126,10 +126,18 @@
 
 }
 
+@media only screen and (min-width:768px){
+    .forgot-password-page {
+        .forgot-password-main-content, .success-page {
+            width: 40%;
+        }
+    }
+}
+
 @media only screen and (min-width:992px){
     .forgot-password-page {
         .forgot-password-main-content, .success-page {
-            width: 30%;
+            max-width: 330px;
         }
     }
 }
