--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -355,6 +355,7 @@
                 padding: 1.5rem;
                 .arrow-back {
                     font-size: 2rem;
+                    cursor: pointer;
                 }
             }
             .heading {
@@ -374,7 +375,7 @@
                         padding: 2.2rem;
                         transition: height ease-in-out .3s;
                         .card-title {
-                            font-size: 1.5rem;
+                            font-size: 1.2rem;
                         }
                         .arrow-icon {
                             font-size: 1.4rem;
@@ -410,6 +411,40 @@
                         height: 17rem;
                     }
                 }
+            }
+        }
+    }
+}
+
+
+@media only screen and (min-width:992px) {
+    .page {
+        .dashboard {
+            .sections {
+                margin-top: 12rem;
+                .section-title {
+                    font-size: 2rem;
+                }
+                .activities {
+                    margin: 2rem auto 4rem;
+                    width: 55%;
+                    .activity {
+                        padding: 1.5rem;
+                        .activity-icon {
+                            font-size: 5rem;
+                        }
+                        span {
+                            font-size: 1rem;
+                        }
+                        
+                    }
+                }
+            }
+        }
+        .user-settings {
+            .sticky-top {
+                top: 60px;
+                
             }
         }
     }
